--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 code_explanation.md
 DEPLOYMENT_UI.md
 DEVELOPMENT_INSTRUCTIONS.md
-improvements.txt
+improvement.txt
 
 npm-debug.log*
 yarn-debug.log*
